--- a/templates/templates/latest-transfers.html
+++ b/templates/templates/latest-transfers.html
@@ -26,11 +26,11 @@
         <table class="players">
           {% for i in transfer %}
           <tr>
-            <td>i.player</td>
-            <td>i.eski</td>
-            <td>i.yangi</td>
-            <td>i.narx</td>
-            <td>i.tax_narxi</td>
+            <td>{{i.player}}</td>
+            <td>{{i.eski}}</td>
+            <td>{{i.yangi}}</td>
+            <td>{{i.narx}}</td>
+            <td>{{i.tax_narxi}}</td>
           </tr>
           {% endfor %}
         </table>
