--- a/templates/templates/tryouts.html
+++ b/templates/templates/tryouts.html
@@ -59,7 +59,7 @@
           If all of the above about you, get in touch
           <a href="#">mail@topfootballtransfers.com</a></b
         ><br>
-        <a style="margin-bottom: 100px !important;" href="./courses.html">
+        <a style="margin-bottom: 100px !important;" href="{% url 'courses' %}">
           Курсы футбольных агентов в Киеве/Football agent courses in Kiev
         </a>
       </div>
