--- a/templates/templates/2017-18season.html
+++ b/templates/templates/2017-18season.html
@@ -1,7 +1,9 @@
 {% extends 'header.html' %}
     {% block content %}
       <div class="nav">
-          <h2>– {{  }} –</h2>
+        {% for i in transferlar%}
+          <h2>– {{ i.mavsum }} –</h2>
+        {% endfor %}
           <table class="content-nav">
             <thead>
               <tr>
@@ -23,13 +25,15 @@
         </div>
       <div class="latest-transfers">
         <table class="players">
+          {% for i in transferlar%}
           <tr>
-            <td>1 Jack Grealish</td>
-            <td>Aston villa</td>
-            <td>Man City</td>
-            <td>117,5</td>
-            <td>65</td>
+            <td>{{ i.player }}</td>
+            <td>{{ i.eski }}</td>
+            <td>{{ i.yangi }}</td>
+            <td>{{ i.narx }}</td>
+            <td>{{ i.tax_narx }}</td>
           </tr>
+          {% endfor %}
         </table>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta sequi quia eos cupiditate rerum accusantium odit enim, expedita, architecto error dignissimos voluptatibus. Nisi illo, maiores fugit amet neque eveniet!</p>
