--- a/templates/templates/england.html
+++ b/templates/templates/england.html
@@ -1,17 +1,21 @@
 {% extends 'header.html' %}
   {% block content %}
       <div class="nav">
-        <h2>– ENGLAND –</h2>
+        {% for i in clublar %}
+        <h2>– {{ i.davlat }} –</h2>
+        {% endfor %}
         <table class="content-nav"></table>
       </div>
       <div class="content" style="margin-top: 170px ;">
         <div class="clubs">
+          {% for i in clublar %}
           <div class="club">
-            <a href="../country-clubs.html">
-              <img src="../img/manchester.logo.png" alt="" />
-              Manchester City
+            <a href="{% url 'country' club.id  %}">
+              <img src="{{ club.logo.url }}" alt="" />
+              {{i.nom}}
             </a>
           </div>
+          {% endfor %}
         </div>
       </div>
   {% endblock %}
