--- a/templates/templates/index.html
+++ b/templates/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 
   {% block content %}
-      <div class="country-clubs">
+      {% comment %} <div class="country-clubs">
         <h2 id="title">Clubs by country</h2>
         <div class="country">
           <div>
@@ -23,15 +23,15 @@
             <h3><a href="./countries/other.html">Other</a> <br /></h3>
           </div>
         </div>
-      </div>
+      </div> {% endcomment %}
       <div class="latest-transfers">
         <div class="countries">
           <a href="{% url 'clubs' %}"> CLUBS </a>
           <a href="{% url 'latest_transfers' %}"> LATEST TRANSFERS </a>
           <a href="{% url 'players' %}"> PLAYERS </a>
           <a href="{% url 'u_20_players' %}"> U-20 PLAYERS </a>
-          <a href="./tryouts.html"> TRYOUTS </a>
-          <a href="./stats.html"> STATS </a>
+          <a href="{% url 'tryouts' %}"> TRYOUTS </a>
+          <a href="{% url 'stats' %}"> STATS </a>
         </div>
       </div>
   {% endblock %}
